--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -10,6 +10,8 @@ on:
   pull_request:
     branches: [ "main" ]
 
+  #schedule: 
+    
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -20,6 +22,33 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v4
+
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: echo Hello, world!
+
+      # Runs a set of commands using the runners shell
+      - name: Run a multi-line script
+        run: |
+          echo Add other actions to build,
+          echo test, and deploy your project.
+
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v4.6.0
+        with:
+          # Artifact name
+          name: Dhruvan_try
+          # A file, directory or wildcard pattern that describes what to upload
+          path: ${{github.workspace}} 
+
+  test:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    needs: build
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
