--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -84,3 +84,11 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+
+      - name: Download a Build Artifact
+        uses: actions/download-artifact@v4.1.8
+        with:
+          # Name of the artifact to download. If unspecified, all artifacts for the run are downloaded.
+          name: Dhruvan_try
+          # A file, directory or wildcard pattern that describes what to upload
+          path: ${{github.workspace}} 
